--- a/cbs_backend/app/templates/admin/home.html
+++ b/cbs_backend/app/templates/admin/home.html
@@ -7,12 +7,18 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title></title>
+        <title>ADMIN</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="">
     </head>
     <body>
-        <script src="" async defer></script>
+       <form method='post' action="{% url 'home' %}">
+        {% csrf_token %}
+        {{ form.as_p }}
+        <button type='submit'>Register</button>
+       </form>
+        <a href = "{% url 'teacher-list' %}">Click Her To see All teacher's</a>
+        <a href = "{% url 'student-list' %}">Click Her To see All student's</a>
     </body>
 </html>
